cargo-features = ["strip"]

[package]
name = "mlatu"
version = "0.1.0"
edition = "2021"
description = "The mlatu programming language"
repository = "https://github.com/mlatu-lang/mlatu"
readme = "docs/README.md"
keywords = ["cli", "parser", "langdev", "language"]
categories = ["command-line-utilities", "compilers", "text-editors"]
license-file = "https://mlatu-lang.github.io/license/"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.1"
crossterm = { version = "0.21.0", features = ["event-stream"] }
unic-ucd-category = "0.9.0"
tokio-stream = "0.1.7"
clap = "2.33.3"

[dependencies.tokio]
version = "1.12.0"
features = [
    "rt-multi-thread",
    "io-util",
    "macros",
    "fs",
    "process"
]

[features]

[profile.release]
strip = true
