cargo-features = ["strip"]

[package]
name = "mlatu"
version = "0.1.0"
edition = "2021"
description = "The mlatu programming language"
repository = "https://github.com/mlatu-lang/mlatu"
readme = "docs/README.md"
keywords = ["cli", "parser", "langdev", "language"]
categories = ["command-line-utilities", "compilers", "text-editors"]
license-file = "https://mlatu-lang.github.io/license/"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3.0"
mlatu = { git = "https://github.com/mlatu-lang/libraries"}
im = "15.0.0"
iced_native = "0.4.0"

[features]

[profile.release]
strip = true
