cargo-features = ["strip"]

[package]
name = "mlatu"
version = "0.1.0"
edition = "2021"
description = "The mlatu programming language"
repository = "https://github.com/mlatu-lang/mlatu"
readme = "docs/README.md"
keywords = ["cli", "parser", "langdev", "language"]
categories = ["command-line-utilities", "compilers", "text-editors"]
license-file = "https://mlatu-lang.github.io/license/"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.3"
crossterm = { version = "0.23.2", features = ["event-stream"] }
unic-ucd-category = "0.9.0"
tokio-stream = "0.1.8"
clap = { version = "3.1.10", features = ["cargo"] }
mlatu-lib = { git = "https://github.com/mlatu-lang/libraries", package="mlatu"}
im = "15.1.0"
tokio = { version = "1.18.5", features = ["rt", "macros", "rt-multi-thread"] }

[features]

[profile.release]
strip = true
